--- a/017 webpack/package.json
+++ b/017 webpack/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.2",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.18.2",
