--- a/017 webpack/package.json
+++ b/017 webpack/package.json
@@ -2,7 +2,7 @@
   "name": "webpack_demo",
   "version": "1.0.0",
   "description": "webpack demo",
-  "main": "index.js",
+  "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --open",
@@ -16,6 +16,9 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.2",
     "html-webpack-plugin": "^2.30.1",
+    "html-withimg-loader": "^0.1.16",
+    "less": "^3.0.0-alpha.3",
+    "less-loader": "^4.0.5",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.6.0",
