--- a/017 webpack/package.json
+++ b/017 webpack/package.json
@@ -4,9 +4,9 @@
   "description": "webpack demo",
   "main": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --open",
-    "build": "webpack"
+    "company": "set type=company&webpack",
+    "home": "set type=home&webpack"
   },
   "author": "lxh",
   "license": "ISC",
@@ -15,7 +15,6 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
