--- a/017 webpack/package.json
+++ b/017 webpack/package.json
@@ -31,5 +31,8 @@
     "url-loader": "^0.5.9",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
+  },
+  "dependencies": {
+    "jquery": "^3.2.1"
   }
 }
